[metadata]
name = xsystem
version = 0.0.1

author = Stefano Braghin
author_email = stefanob@ie.ibm.com

[options]
py_modules = xsystem
python_requires = >=3.8

[options.entry_points]
console_scripts =
    regex-learner = xsystem:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E265,E501,W504
