[metadata]
name = xsystem
version = 0.0.1
description = The project provides a tool/library implementing an automated regular expression building mechanism.

author = Stefano Braghin, Liubov Nedoshivina
author_email = "Liubov Nedoshivia" <liubov.nedoshivina@ibm.com>
long_description = long_description
long_description_content_type = text/markdown
url = https://github.com/IBM/regex-learner
license = Apache License 2.0
[options]
py_modules = xsystem
python_requires = >=3.8

[options.entry_points]
console_scripts =
    regex-learner = xsystem:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
ignore = E265,E501,W504

[bandit]
ignore = B101
